Modified Content 1 Section. Added placeholder photos/names.

--- a/index.html
+++ b/index.html
@@ -86,24 +86,36 @@ f<body>
     <div class="container">
         <div class="row">
             <div class="col-sm-4 col-xs-6">
-                <h1> Text text 1</h1>
+                <img class="img-responsive"
+                     src="/Photos/Hero_Photo_A.jpeg"/>
+                <h1> Cool Shirt 1</h1>
             </div>
             <div class="col-sm-4 col-xs-6">
-                <h1> Text Test 2</h1>
+                <img class="img-responsive"
+                     src="/Photos/Hero_Photo_A.jpeg"/>
+                <h1> Cool Shirt 2</h1>
             </div>
             <div class="col-sm-4">
-                <h1> Text Test 3</h1>
+                <img class="img-responsive"
+                     src="/Photos/Hero_Photo_A.jpeg"/>
+                <h1> Cool Shirt 3</h1>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-4 col-xs-6">
-                <h1> Text test 1.1</h1>
+                <img class="img-responsive"
+                     src="/Photos/Hero_Photo_A.jpeg"/>
+                <h1> Popular Shirt 1</h1>
                 </div>
             <div class="col-sm-4 col-xs-6">
-                <h1> Text Test 2</h1>
+                <img class="img-responsive"
+                     src="/Photos/Hero_Photo_A.jpeg"/>
+                <h1> Popular Shirt 2</h1>
             </div>
             <div class="col-sm-4">
-                <h1> Text Test 3</h1>
+                <img class="img-responsive"
+                     src="/Photos/Hero_Photo_A.jpeg"/>
+                <h1> Popular Shirt 3</h1>
             </div>
         </div>
         <div class="row">
