added logo+changes banner image

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -61,7 +61,8 @@
     -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            <a href="#" class="navbar-brand">MyWebsite</a>
+             
+            <a href="#" class="navbar-brand logo"><img src="../Photos/logo.png" height="auto" width="150px"></a>
 
             <button class="navbar-toggle" data-toggle="collapse" data-target="#mynavbar">
                     <span class="icon-bar"></span>
@@ -101,7 +102,7 @@
     <div class="jumbotron bg">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-8" id="main">
+                <div class="col-md-2" id="main">
                     <br><br>
 
                     <h1>Welcome to Titan</h1>
@@ -124,7 +125,7 @@
     <section class="popularShirt">
         <div class="container content">
             <div class="row">
-                <div class="col-sm-4 col-xs-6">
+                <div class="col-sm-4 col-xs-6 shirt">
                     <img class="img-responsive" src="/Photos/Hero_Photo_A.jpeg" />
                     <h1> Cool Shirt 1</h1>
                 </div>
