--- a/HTML/index.html
+++ b/HTML/index.html
@@ -124,10 +124,10 @@
     <!-- Note: The <h1>'s are placeholders for images -->
     <section class="popularShirt">
         <div class="container content">
-            <div class="row">
-                <div class="col-sm-4 col-xs-6 shirt">
+            <div class="row shirt1">
+                <div class="col-sm-4 col-xs-6">
                     <img class="img-responsive" src="/Photos/Hero_Photo_A.jpeg" />
-                    <h1> Cool Shirt 1</h1>
+                    <h3> Cool Shirt 1</h3>
                 </div>
                 <div class="col-sm-4 col-xs-6">
                     <img class="img-responsive" src="/Photos/Hero_Photo_A.jpeg" />
@@ -138,10 +138,10 @@
                     <h1> Cool Shirt 3</h1>
                 </div>
             </div>
-            <div class="row">
+            <div class="row shirt2">
                 <div class="col-sm-4 col-xs-6">
                     <img class="img-responsive" src="/Photos/Hero_Photo_A.jpeg" />
-                    <h1> Popular Shirt 1</h1>
+                    <h3> Popular Shirt 1</h3>
                 </div>
                 <div class="col-sm-4 col-xs-6">
                     <img class="img-responsive" src="/Photos/Hero_Photo_A.jpeg" />
