Changed the div structure

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -20,6 +20,7 @@
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/CSS/main.css" />
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -123,33 +124,62 @@
     <!-- Content 1: Popular Shirt Options -->
     <!-- Note: The <h1>'s are placeholders for images -->
     <section class="popularShirt">
-        <div class="container content">
-            <div class="row shirt1">
-                <div class="col-sm-4 col-xs-6">
-                    <img class="img-responsive" src="/Photos/Hero_Photo_A.jpeg" />
-                    <h3> Cool Shirt 1</h3>
+        <div class="container-fluid cool content">
+            <div class="row cool">
+                <div class="col-sm-4 iteam-container">
+                    <img class="img-responsive" src="/Photos/shirtTest1.png" />
+                    <div class="description">
+<!--
+                        <h3 id="name"> Cool Shirt 1</h3>
+                        <p id="price">Price: $20</p>
+-->
+                        <h3> Cool Shirt 1</h3>
+                        <h4>Price: $20</h4>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+
+                    </div>
                 </div>
-                <div class="col-sm-4 col-xs-6">
-                    <img class="img-responsive" src="/Photos/Hero_Photo_A.jpeg" />
-                    <h1> Cool Shirt 2</h1>
+                <div class="col-sm-4 iteam-container">
+                        <img class="img-responsive" src="/Photos/shirtTest1.png" />
+                    <div class="description">
+                        <h3> Cool Shirt 2</h3>
+                        <h4>Price: $20</h4>
+                    </div>
+                    
                 </div>
-                <div class="col-sm-4">
-                    <img class="img-responsive" src="/Photos/Hero_Photo_A.jpeg" />
-                    <h1> Cool Shirt 3</h1>
+                <div class="col-sm-4 iteam-container">
+                    <img class="img-responsive" src="/Photos/shirtTest1.png" />
+                    <div class="description">
+                        <h3> Cool Shirt 3</h3>
+                        <h4>Price: $20</h4>
+                    </div>
                 </div>
+                
             </div>
-            <div class="row shirt2">
-                <div class="col-sm-4 col-xs-6">
-                    <img class="img-responsive" src="/Photos/Hero_Photo_A.jpeg" />
-                    <h3> Popular Shirt 1</h3>
+        </div>
+        <div class="container-fluid pop">
+            <div class="row popular">
+                <div class="col-sm-4 iteam-container">
+                    <img class="img-responsive large" src="/Photos/10TypesOfPeople.jpg" />
+                    <div class="description">
+                        <h3> Popular Shirt 1</h3>
+                    </div>
                 </div>
-                <div class="col-sm-4 col-xs-6">
-                    <img class="img-responsive" src="/Photos/Hero_Photo_A.jpeg" />
-                    <h1> Popular Shirt 2</h1>
+                <div class="col-sm-4 iteam-container">
+                    <img class="img-responsive large" src="/Photos/10TypesOfPeople.jpg" />
+                    <div class="description">
+                        <h3> Popular Shirt 2</h3>
+                    </div>
                 </div>
-                <div class="col-sm-4">
-                    <img class="img-responsive" src="/Photos/Hero_Photo_A.jpeg" />
-                    <h1> Popular Shirt 3</h1>
+                <div class="col-sm-4 iteam-container">
+                    <img class="img-responsive large" src="/Photos/10TypesOfPeople.jpg" />
+                    <div class="description">
+                        <h3> Popular Shirt 3</h3>
+                    </div>
                 </div>
             </div>
             <div class="row">
