Playing around with jumbotron

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -105,7 +105,7 @@
             <div class="row">
                 <div class="col-md-2" id="main">
                     <br><br>
-
+<!--                    <img src="../Photos/BackgroundCompletelyErased2.png" style="visibility: hidden;" />-->
                     <h1>Welcome to Titan</h1>
                     <p class="lead">Main information here.. Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text
                         <br> More Information Text Text Text Text Text Text Text Text Text Text Text Text
