--- a/HTML/index.html
+++ b/HTML/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" type="text/css" href="/CSS/main.css" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -63,7 +64,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
              
-            <a href="#" class="navbar-brand logo"><img src="../Photos/logo.png" height="auto" width="150px"></a>
+            <a href="#" class="navbar-brand logo"><i class="fas fa-tshirt"></i> Uglier<b>You</b></a>
 
             <button class="navbar-toggle" data-toggle="collapse" data-target="#mynavbar">
                     <span class="icon-bar"></span>
