Added Scrollspy functionality.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -34,7 +34,7 @@
     
 </head>
 
-<body id="myPage">
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="300">
 
     <!-- NAVIGATION BAR -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
