--- a/HTML/index.html
+++ b/HTML/index.html
@@ -61,13 +61,13 @@
                         </ul>
                     </li>
                     -->
-                    <li><a href="#section1-shirts">Top Selections</a></li>
-                    <li><a href="#section2-reviews">Reviews</a></li>
-                    <li><a href="#section3-buildYourOwnShirt">Make Your Own</a></li>
-                    <li><a href="#section4-contactUs">Contact Us</a></li>
+                    <li><a href="index.html#section1-shirts">Top Selections</a></li>
+                    <li><a href="index.html#section2-reviews">Reviews</a></li>
+                    <li><a href="index.html#section3-buildYourOwnShirt">Make Your Own</a></li>
+                    <li><a href="index.html#section4-contactUs">Contact Us</a></li>
 
-                    <!-- Currently not built out -->
-                    <li><a href="/HTML/shoppingcart.html">Shopping Cart</a></li>
+                    <!-- Currently not built, leads to checkout page for now -->
+                    <li><a href="/HTML/checkoutpage.html">Shopping Cart</a></li>
                 </ul>
             </div>
         </div>
@@ -77,7 +77,7 @@
 
     <!-- MAIN BANNER -->
 
-    <div class="jumbotron" section1-container>
+    <div class="jumbotron section1-container">
         <div class="container">
             <div class="row">
                 <div class="col-xs-4" id="main">
@@ -101,7 +101,7 @@
     <!-- Content 1: Popular Shirt Options -->
     <!-- Note: The <h1>'s are placeholders for images -->
     <section class="Cool/Popular Shirts">
-        <div id="section1-shirts" class="container-fluid">
+        <div id="section1-shirts" class="container-fluid section1">
             <div id="coolShirtsRow" class="container-fluid content coolShirts">
                 <div class="row">
                     <div class="col-xs-3 item-container">
@@ -323,6 +323,26 @@
                 } // End if
             });
         });
+    </script>
+    <script>
+        /**
+         * Listen to scroll to change header opacity class
+         */
+        function checkScroll() {
+            var startY = $('.navbar').height() * 2; //The point where the navbar changes in px
+
+            if ($(window).scrollTop() > startY) {
+                $('.navbar').addClass("scrolled");
+            } else {
+                $('.navbar').removeClass("scrolled");
+            }
+        }
+
+        if ($('.navbar').length > 0) {
+            $(window).on("scroll load resize", function() {
+                checkScroll();
+            });
+        }
     </script>
 
 
