Fixed margin issue on right side, and modified body background color.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -258,7 +258,7 @@
     <!-- Section 4: Get in touch -->
     <section id="contact-us">
         <!-- Left Panel Begins -->
-        <div id="section4-contactUs" class="row">
+        <div id="section4-contactUs" class="container-fluid">
             <div class="col-sm-9" id="panel-left">
                 <div class="col-sm-12">
                     <h1>Get in Touch</h1>
