--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="/CSS/main.css" />
+    <link rel="stylesheet" type="text/css" href="CSS/main.css" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -33,7 +33,7 @@
     <!-- Script for scrolling was accidentally deleted here, because it was ruining nav-bar, but should be added when fixed. -->
 
 <!--    <script type ="text/javascript" src="../JavaScript/animation.js"></script>-->
-    <script type="text/javascript" src="../JavaScript/index.js"></script>
+    <script type="text/javascript" src="JavaScript/index.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     
 </head>
@@ -71,7 +71,7 @@
                     <li><a href="#section4-contactUs">Contact Us</a></li>
 
                     <!-- Currently not built, leads to checkout page for now -->
-                    <li><a href="/HTML/checkoutpage.html">Shopping Cart</a></li>
+                    <li><a href="HTML/checkoutpage.html">Shopping Cart</a></li>
                 </ul>
             </div>
         </div>
@@ -109,7 +109,7 @@
             <div id="coolShirtsRow" class="container-fluid content coolShirts">
                 <div class="row">
                     <div class="col-xs-3 item-container">
-                        <img class="img-responsive" src="/Photos/shirtTest1.png" />
+                        <img class="img-responsive" src="Photos/shirtTest1.png" />
                         <div class="description">
                             <!--
                         <h3 id="name"> Cool Shirt 1</h3>
@@ -126,7 +126,7 @@
                         </div>
                     </div>
                     <div class="col-xs-3 item-container">
-                        <img class="img-responsive" src="/Photos/shirtTest1.png" />
+                        <img class="img-responsive" src="Photos/shirtTest1.png" />
                         <div class="description">
                             <h3> Cool Shirt 2</h3>
                             <h4>Price: $20</h4>
@@ -134,14 +134,14 @@
 
                     </div>
                     <div class="col-xs-3 item-container">
-                        <img class="img-responsive" src="/Photos/shirtTest1.png" />
+                        <img class="img-responsive" src="Photos/shirtTest1.png" />
                         <div class="description">
                             <h3> Cool Shirt 3</h3>
                             <h4>Price: $20</h4>
                         </div>
                     </div>
                     <div class="col-xs-3 item-container">
-                        <img class="img-responsive" src="/Photos/shirtTest1.png" />
+                        <img class="img-responsive" src="Photos/shirtTest1.png" />
                         <div class="description">
                             <h3> Cool Shirt 3</h3>
                             <h4>Price: $20</h4>
@@ -153,7 +153,7 @@
             <div class="container-fluid content popularShirts">
                 <div class="row">
                     <div class="col-xs-3 item-container">
-                        <img class="img-responsive" src="/Photos/10TypesOfPeople.jpg" />
+                        <img class="img-responsive" src="Photos/10TypesOfPeople.jpg" />
                         <div class="description">
                             <h3> Popular Shirt 1</h3>
                             <h4> price</h4>
@@ -166,19 +166,19 @@
                         </div>
                     </div>
                     <div class="col-xs-3 item-container">
-                        <img class="img-responsive" src="/Photos/10TypesOfPeople.jpg" />
+                        <img class="img-responsive" src="Photos/10TypesOfPeople.jpg" />
                         <div class="description">
                             <h3> Popular Shirt 2</h3>
                         </div>
                     </div>
                     <div class="col-xs-3 item-container">
-                        <img class="img-responsive" src="/Photos/10TypesOfPeople.jpg" />
+                        <img class="img-responsive" src="Photos/10TypesOfPeople.jpg" />
                         <div class="description">
                             <h3> Popular Shirt 3</h3>
                         </div>
                     </div>
                     <div class="col-xs-3 item-container">
-                        <img class="img-responsive" src="/Photos/10TypesOfPeople.jpg" />
+                        <img class="img-responsive" src="Photos/10TypesOfPeople.jpg" />
                         <div class="description">
                             <h3> Popular Shirt 3</h3>
                         </div>
@@ -203,21 +203,21 @@
             <div class="row">
                 <div class="col">
                     <div class="col-xs-4">
-                        <img class="img-responsive" src="/Photos/Hero_Photo_A.jpeg" />
+                        <img class="img-responsive" src="Photos/Hero_Photo_A.jpeg" />
                         <h2>Reviewer Info 1</h2>
                         <p class="sub_paragraph">Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text </p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="col-xs-4">
-                        <img class="img-responsive" src="/Photos/Hero_Photo_A.jpeg" />
+                        <img class="img-responsive" src="Photos/Hero_Photo_A.jpeg" />
                         <h2>Reviewer Info 2</h2>
                         <p class="sub_paragraph">Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text </p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="col-xs-4">
-                        <img class="img-responsive" src="/Photos/Hero_Photo_A.jpeg" />
+                        <img class="img-responsive" src="Photos/Hero_Photo_A.jpeg" />
                         <h2>Reviewer Info 3</h2>
                         <p class="sub_paragraph">Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text </p>
                     </div>
