Made canvas smaller

--- a/index.html
+++ b/index.html
@@ -310,7 +310,9 @@
                                 <option value="Pacifico">Pacifico</option>
                                 <option value="VT323">VT323</option>
                                 <option value="Quicksand">Quicksand</option>
-                                <option value="Inconsolata">Inconsolata</option>
+                                <option value="Fancy">Fancy</option>
+                                <option value="handWriting">Hand Writing</option>
+                                
                             </select>
 
                         </div>
@@ -362,13 +364,15 @@
                 <div class="col">
                     <div class="col-xs-6">
                         <div id="canvasBG">
-                            <canvas id="c" width="240" height="400"></canvas>
+                            <canvas id="c" width="220" height="400"></canvas>
                         </div>
                         <div class="row options">
                                 <button id="del" type="button"><b><i class="fas fa-trash-alt"></i> Delete Selection</b></button>
                                 <button id="clr" type="button"><b><i class="fas fa-eraser"></i> Clear Canvas</b></button>
                         </div>
 <!--                        <img class="img-responsive" src="/Photos/Hero_Photo_A.jpeg" />-->
+                        
+                        <h4 class="statement"> ** Please note the final version of your custom design will be emailed to you for approval.</h4>
                         <h2>Choose your Own Shirt!</h2>
                     </div>
                 </div>
