Added jumbotron picture + anchor

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <![endif]-->
 
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+    <script src="assets/fabric.min.js"></script>
 
     <!-- Script for scrolling was accidentally deleted here, because it was ruining nav-bar, but should be added when fixed. -->
 
     <!--    <script type ="text/javascript" src="../JavaScript/animation.js"></script>-->
     <script type="text/javascript" src="JavaScript/index.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-
 </head>
 
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="300">
@@ -101,10 +101,14 @@
             </div>
         </div>
     </div>
-
     <!-- Content 1: Popular Shirt Options -->
     <!-- Note: The <h1>'s are placeholders for images -->
     <section class="Cool/Popular Shirts">
+         <div class="row anchor-contain">
+             <div class="col-md-12">
+             <a href="#section1-shirts"><img class="anchor" id="anchor-scroll" alt="Arrow Down Icon" src="Photos/chevron.png" ></a>
+             </div>
+        </div>
         <div id="section1-shirts" class="container-fluid section1">
             <div id="coolShirtsRow" class="container-fluid content coolShirts">
                 <div class="row">
@@ -509,8 +513,6 @@
         }
     </script>
 -->
-
-
 
 </body>
 
