Added logo to navbar

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- NAVIGATION BAR -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="/HTML/index.html">Home</a>
+            <a class="navbar-brand logo" href="/HTML/index.html"><i class="fas fa-tshirt"></i> Uglier<b>You</b></a>
 
 
             <button class="navbar-toggle" data-toggle="collapse" data-target="#navbarId">
