--- a/HTML/seemore.html
+++ b/HTML/seemore.html
@@ -25,6 +25,9 @@
 
     <!-- Freewall JS Link + CSS  -->
     <script type="text/javascript" src="../JavaScript/freewall.js"></script>
+    
+    <!--    Favicon-->
+    <link rel="shortcut icon" type="image/png" href="/Photos/favicon.png"/>
 
 
 
