--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap Starter Template</title>
+    <title>Uglier You</title>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -36,6 +36,9 @@
     <!--    <script type ="text/javascript" src="../JavaScript/animation.js"></script>-->
     <script type="text/javascript" src="JavaScript/index.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    
+    <!--    Favicon-->
+    <link rel="shortcut icon" type="image/png" href="/Photos/favicon.png"/>
 </head>
 
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="300">
@@ -43,7 +46,7 @@
     <!-- NAVIGATION BAR -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            <a class="navbar-brand logo" href="/HTML/index.html"><i class="fas fa-tshirt"></i> Uglier<b>You</b></a>
+            <a class="navbar-brand logo" href="index.html"><i class="fas fa-tshirt"></i> Uglier<b>You</b></a>
 
 
             <button class="navbar-toggle" data-toggle="collapse" data-target="#navbarId">
