--- a/HTML/checkoutpage.html
+++ b/HTML/checkoutpage.html
@@ -18,7 +18,9 @@
 
     <!-- CSS LINK -->
     <link href="../CSS/main.css" rel="stylesheet" type="text/css">
-
+    
+    <!--    Favicon-->
+    <link rel="shortcut icon" type="image/png" href="/Photos/favicon.png"/>
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
