--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- NAVIGATION BAR -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="/HTML/index.html">Home</a>
+            <a class="navbar-brand" href="index.html">Home</a>
 
 
             <button class="navbar-toggle" data-toggle="collapse" data-target="#navbarId">
@@ -98,12 +98,18 @@
                     <img class="img-responsive" src="/Photos/Hero_Photo_A.jpeg" />
                 </div>
                 -->
+
             </div>
 
+            <div class="container text-center">
+                <a href="#section1-shirts"><img class="chevron-down text-center" src="assets/chevron-down.png"></a>
+            </div>
         </div>
-        <a href="#section1-shirts"><img class="chevron-down center-block" src="assets/chevron-down.png"></a> 
     </div>
-    
+    <div class="container">
+
+    </div>
+
 
     <!-- Content 1: Popular Shirt Options -->
     <!-- Note: The <h1>'s are placeholders for images -->
@@ -462,6 +468,7 @@
                 } // End if
             });
         });
+
     </script>
     <!--
     <script>
