Changed the orange picture

--- a/HTML/seemore.html
+++ b/HTML/seemore.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="../JavaScript/freewall.js"></script>
     
     <!--    Favicon-->
-    <link rel="shortcut icon" type="image/png" href="/Photos/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="../Photos/favicon.png"/>
 
 
 
