--- a/HTML/checkoutpage.html
+++ b/HTML/checkoutpage.html
@@ -20,7 +20,7 @@
     <link href="../CSS/main.css" rel="stylesheet" type="text/css">
     
     <!--    Favicon-->
-    <link rel="shortcut icon" type="image/png" href="/Photos/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="../Photos/favicon.png"/>
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
