initial commit, cart branch

--- a/index.html
+++ b/index.html
@@ -85,7 +85,11 @@
                     <li><a href="#section4-contactUs">Contact Us</a></li>
 
                     <!-- Currently not built, leads to checkout page for now -->
-                    <li><a href="HTML/checkoutpage.html">Shopping Cart</a></li>
+                    
+                    <li><a href="HTML/checkoutpage.html">Shopping Cart</a>
+                    </li>
+                    <li> <span class="simpleCart_quantity"></span> items - </li>
+                    <li><a href=#>hello</a> </li>
                 </ul>
             </div>
         </div>
