--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     
     <!-- Simple cart -->
-    <script src="/assets/simpleCart.js"></script>
+<!--    <script src="/assets/simpleCart.js"></script>-->
+<!--
 	<script>
 		simpleCart({
 			checkout: { 
@@ -23,6 +24,7 @@
 			}
 		});	
 	</script>
+-->
 
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
